--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ matplotlib>=3.6.3
 seaborn>=0.12.2
 scikit-learn>=1.2.0 
 xlsx2csv>=0.8.1
+pyarrow>=11.0.0
 git+https://github.com/mariolpantunes/nmf@main#egg=nmf
 git+https://github.com/mariolpantunes/knee@main#egg=knee
