--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ seaborn>=0.12.2
 scikit-learn>=1.2.0 
 xlsx2csv>=0.8.1
 pyarrow>=11.0.0
+xgboost>=1.7.5 
 git+https://github.com/mariolpantunes/nmf@main#egg=nmf
 git+https://github.com/mariolpantunes/knee@main#egg=knee
